@@ -8,12 +8,12 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 
 public class CommonUtils {
-    public static final ScheduledExecutorService SCHEDULED_EXECUTOR = Executors.newScheduledThreadPool(1000, Thread.ofVirtual()
+    public static final ScheduledExecutorService SCHEDULED_EXECUTOR = Executors.newScheduledThreadPool(100, Thread.ofVirtual()
             .name("common-scheduled-executor-", 1)
             .factory()
     );
 
-    public static final ExecutorService EXECUTOR = Executors.newThreadPerTaskExecutor(Thread.ofVirtual()
+    public static final ExecutorService EXECUTOR = Executors.newCachedThreadPool(Thread.ofVirtual()
             .name("common-executor-", 1)
             .factory()
     );
